fixed icon being too large on larger resolutions

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ header{
     width: 100%;
     height: 4rem;
     text-align: center;
+    z-index: 999;
 }
 header, aside {
     background-color: #fff;
@@ -116,6 +117,13 @@ h3.hero {
     line-height: 2rem;
     letter-spacing: -1px;
     font-weight: 500;
+}
+.icons-wrapper {
+    display: flex;
+}
+.icons-wrapper img {
+    max-width: 100px;
+    max-height: 300px;
 }
 @media (width > 600px) {
     body {
